# k60gpu

./: README.md
01 Infrastructure Testing/: test.cpp
01 Infrastructure Testing/CMakeProject1/: CMakeCache.txt
ckp_work/c/: ex01a.c  ex01a.px  ex01b.c  ex01b.px  ex01c.c  ex01c.px  ex01d.c  ex01d.px  ex01e.c  ex01f.c  ex01f.px  ex01g.c  ex01g.px  ex02a.c  ex02a.px  ex02b.c  ex02b.px  ex03a.px  ex03b.c  ex03b.px  ex04a.c  ex04a.px  ex04b.c  ex04b.px  ex05a.px  ex05b.c  ex05b.px  ex05c.c  ex05c.px  ex06a.px  ex06b.px  ex06c.c  ex06c.px  ex07a.c  ex07a.px  ex08a.c  ex08a.px  ex08b.c  ex08b.px  ex09a.c  (+30 more)
ckp_work/cuda/: cudaf.cu  cudafs.c  main.c
ckp_work/cuda/CUDA_CMAKE/: CMakeLists 3.8 +.txt  CMakeLists.txt  CUDA_CMAKE.cu  CUDA_CMAKE.h  build.bat
ckp_work/cuda/CUDA_CMAKE/_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CUDA_CMAKE.sln  CUDA_CMAKE.vcxproj  CUDA_CMAKE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
labs/: 01.cu  ex03a.c  guidelines.docx
labs/lab01/: clear.sh  description.md  lab01.docx  main.c  run.sh
labs/lab02/: clear.sh  cpu.cpp  cpuThreads.cpp  cpuThreads.h  description.md  gpu.cu  head.h  main.cpp  myapp.cmp  run.sh  utils.cpp  utils.h
labs/lab02-/: description.md  run.sh
labs/lab02_mpi_cuda_minimal/: myapp.cmp  myapp.h  mycom.c  mycom.h  mygpu.cu  mynet.c
labs/lab03/: clear.sh  cpu.h  cpuThreads.cpp  description.md  gpu.cu  gpu.h  main.cpp  run.sh  utils.cpp
labs/lab03-/: cpu.cpp  head.h  run.sh
labs/lab03--/: clear.sh  main.cpp  run.sh
labs/lab04/: gpu.cu  gpu.h  main.cpp  (+1 more)
(+189 files in other folders)
